--- a/.gitignore
+++ b/.gitignore
@@ -5,26 +5,29 @@
 *.iml
 
 ## Directory-based project format:
-#.idea/
+**/.idea/*
+
+## Include codeStyle
+!*/.idea/codeStyleSettings.xml
 
 ## User-specific stuff:
-**/.idea/workspace.xml
-**/.idea/tasks.xml
-**/.idea/dictionaries
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
 
 ## Sensitive or high-churn files:
-**/.idea/dataSources.ids
-**/.idea/dataSources.xml
-**/.idea/sqlDataSources.xml
-**/.idea/dynamic.xml
-**/.idea/uiDesigner.xml
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
 
 ## Gradle:
-**/.idea/gradle.xml
-**/.idea/libraries
+# .idea/gradle.xml
+# .idea/libraries
 
  Mongo Explorer plugin:
- .**/idea/mongoSettings.xml
+ .idea/mongoSettings.xml
 
 ## File-based project format:
 *.ipr
@@ -33,10 +36,10 @@
 ## Plugin-specific files:
 
 # IntelliJ
-**/out/
+/out/
 
 # mpeltonen/sbt-idea plugin
-**/.idea_modules/
+.idea_modules/
 
 # JIRA plugin
 atlassian-ide-plugin.xml
