feat: Adds basic Spring+Jersey+Tomcat service

--- a/its-webservice/pom.xml
+++ b/its-webservice/pom.xml
@@ -12,11 +12,32 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <commons.lang.version>3.4</commons.lang.version>
     <junit.version>4.12</junit.version>
+    <jackson-version>2.4.3</jackson-version>
   </properties>
+
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.2.5.RELEASE</version>
+  </parent>
 
   <build>
     <finalName>${project.artifactId}</finalName>
     <plugins>
+
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <path>/${project.build.finalName}</path>
+          <update>true</update>
+          <url>http://localhost:8080/manager/text</url>
+          <username>tomcat</username>
+          <password>tomcatuser</password>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -27,10 +48,40 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
   <dependencies>
+
+    <!--Spring-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jersey</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+
     <!-- Apache Commons -->
     <dependency>
       <groupId>org.apache.commons</groupId>
