--- a/its-repository/pom.xml
+++ b/its-repository/pom.xml
@@ -78,6 +78,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.1.7.RELEASE</version>
+    </dependency>
+
 
   </dependencies>
 </project>
