--- a/its-webservice/pom.xml
+++ b/its-webservice/pom.xml
@@ -13,6 +13,7 @@
     <commons.lang.version>3.4</commons.lang.version>
     <junit.version>4.12</junit.version>
     <jackson-version>2.4.3</jackson-version>
+    <java.version>1.8</java.version>
   </properties>
 
   <parent>
