--- a/its-repository/pom.xml
+++ b/its-repository/pom.xml
@@ -16,6 +16,8 @@
     <hikari.version>2.3.9</hikari.version>
     <commons.lang.version>3.4</commons.lang.version>
     <junit.version>4.12</junit.version>
+    <spring.test.version>4.1.7.RELEASE</spring.test.version>
+    <spring.test.dbunit.version>1.0.0</spring.test.dbunit.version>
   </properties>
 
   <build>
@@ -71,6 +73,8 @@
       <version>${commons.lang.version}</version>
     </dependency>
 
+    <!-- Unit Testing -->
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -81,7 +85,14 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>4.1.7.RELEASE</version>
+      <version>${spring.test.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.springtestdbunit</groupId>
+      <artifactId>spring-test-dbunit</artifactId>
+      <version>${spring.test.dbunit.version}</version>
+      <scope>test</scope>
     </dependency>
 
 
