--- a/its-webservice/pom.xml
+++ b/its-webservice/pom.xml
@@ -99,11 +99,11 @@
 
     <!-- Its-Repo -->
 
-    <!--<dependency>-->
-      <!--<groupId>nu.jixa.its</groupId>-->
-      <!--<artifactId>its-repository</artifactId>-->
-      <!--<version>1.0-SNAPSHOT</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>nu.jixa.its</groupId>
+      <artifactId>its-repository</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
 
   </dependencies>
 </project>
