--- a/its-webservice/pom.xml
+++ b/its-webservice/pom.xml
@@ -105,5 +105,13 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
 
+    <!--Extra-->
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.8.6</version>
+    </dependency>
+
   </dependencies>
 </project>
