--- a/its-webservice/pom.xml
+++ b/its-webservice/pom.xml
@@ -105,12 +105,28 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
 
-    <!--Extra-->
+    <!--Required for connecting with ITS-Repository through Spring-->
 
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
       <version>1.8.6</version>
+    </dependency>
+
+    <!--Testing-->
+
+    <dependency>
+      <groupId>com.jayway.restassured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>2.5.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-junit</artifactId>
+      <version>2.0.0.0</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
