--- a/its-webservice/pom.xml
+++ b/its-webservice/pom.xml
@@ -151,5 +151,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+      <version>1.0.4</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
