fix: Updated table names to be more consistent

--- a/its-webservice/src/test/resources/application.properties
+++ b/its-webservice/src/test/resources/application.properties
@@ -1,2 +1,2 @@
 #Test Configuration
-test.reset.sql.template=ALTER TABLE %s AUTO_INCREMENT = 1
+test.reset.sql.template=ALTER TABLE %s AUTO_INCREMENT = 1;
