--- a/its-repository/pom.xml
+++ b/its-repository/pom.xml
@@ -100,6 +100,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.6.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.6.1</version>
+    </dependency>
 
   </dependencies>
 </project>
