--- a/its-repository/pom.xml
+++ b/its-repository/pom.xml
@@ -13,6 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <hibernate.version>4.3.10.Final</hibernate.version>
     <spring.data.version>1.8.2.RELEASE</spring.data.version>
+    <jackson.version>2.6.1</jackson.version>
     <spring.aspects.version>4.2.1.RELEASE</spring.aspects.version>
     <mysql-version>5.1.36</mysql-version>
     <hikari.version>2.3.9</hikari.version>
