--- a/its-webservice/pom.xml
+++ b/its-webservice/pom.xml
@@ -13,7 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <commons.lang.version>3.4</commons.lang.version>
     <junit.version>4.12</junit.version>
-    <jackson-version>2.4.3</jackson-version>
+    <jackson.version>2.6.1</jackson.version>
     <java.version>1.8</java.version>
   </properties>
 
@@ -83,6 +83,12 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Required for serialization of Java 8 Dates(JSR310) -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
 
     <!-- Apache Commons -->
     <dependency>
@@ -158,6 +164,5 @@
       <version>1.0.4</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 </project>
